  user backs out of deposit screen (thanks Chris H).

--Support for list of languages in language.txt where the top language is the
  main one, and subsequent languages augment the translation by providing
  strings only for missing keys.  Thus, English can serve as a backup language
  for an incomplete translation (thanks Jimmy G).





Version 23     Live Server Fixes

--Cabal compensation points now awarded automatically.

--Added mega-skips to log paging.

--Added better handling of unsupported currencies when sending checks.

--Now emails admin whenever a check goes out (and also when check request 
  fails).

--Fixed player pot listings in endOldGames logging.

--Fixed DENIED when folding after opponent left (thanks Christian E).

--Added Message-Id and Date headers to outgoing emails to prevent
  spam flagging.




Version 23     2015-May-1

--Fixed reading parameters from header of playback file.

--Fixed crash on next game when letting go of a slider just as the move timeout
  happens (thanks Jonathan HP).





Version 22     Live Server Fixes

--Support in admin interface for awarding cabal member compensation points.

--Fixed so that cabal contest scores can never go below 0 to remove the benefit
  of starting over with a fresh account after losing points.

--Added support for a series of cabal contests spaced out over time and run
  automatically.




Version 22     2015-April-7

--Fixed bug in lingering commit button when dragging a slider and releasing it
  in a way that presses the commit button (thanks Benjamin Y).

--Part of parchment was peeking out under black overlay square during board
  fade-out.  Made overlay square slightly larger to fix this.

--Fixed so that player count on menu screen doesn't flicker on auto-reload when
  there are no active games.

--Added active player count to WAITING FOR OPPONENT screen (protocol change).

--Added support for a list of chosen opponents in launch contest instead of
  just one.
